# DA-Proj-22

./: .gitignore  Codigo.7z  Codigo2.7z  Codigo3.7z  README.md
Delivery/Codigo/: a.out  cenario2.cpp  cenario3.cpp  crescente1.txt  crescente3.txt  decrescente3.txt  outputcen1crescente.txt  outputcen1descrecente.txt
Delivery/Codigo3/: cenario1.hpp  cenario2.hpp  cenario3.hpp  info.hpp  menu.cpp
Delivery/Input/: carrinhas3.txt  encomendas3.txt  encomendas4.txt
Ideias/: binpack.cpp  hello.cpp
Presentation/: Logística Urbana para Entrega de Mercadorias.pptx
Presentation/input/: encomendas.txt  encomendas3.txt
Project/: CMakeCache.txt  CMakeLists.txt  a.out  c1  c2  carrinhas.txt  carrinhas2.txt  carrinhas3.txt  cen  cen2  cen3  cenario1.cpp  cenario2  cenario2.cpp  cenario3  cenario3.cpp  encomendas2.txt  main  main.cpp  output.txt  pseudo3.txt
Project/Codigo/: a.out  cenario1.cpp  cenario1.hpp  cenario2.cpp  cenario2.hpp  cenario3.cpp  cenario3.hpp
Project/Codigo/html/: annotated.html  cenario1_8hpp_source.html  cenario2_8hpp_source.html  cenario3_8hpp_source.html  classCarrinha.html  classEncomenda-members.html  classes.html  functions.html  functions_func.html
Project/Codigo/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  classes_0.js  classes_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  searchdata.js
Project/Codigo/latex/: annotated.tex  classCarrinha.tex  classEncomenda.tex  refman.tex
Project/Input/: encomendas2.txt
Project/Pseudo/: cenario1_pseudo1.txt  cenario2pseudo(2).txt  pseudo3.txt
(+32 files in other folders)
